build/log/idf_py_stderr_output_29943
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c: In function 'mqtt_app_start':
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:11:10: error: 'esp_mqtt_client_config_t' has no member named 'uri'
   11 |         .uri = "mqtt://164.41.98.25",
      |          ^~~
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:12:10: error: 'esp_mqtt_client_config_t' has no member named 'username'
   12 |         .username = "OofGhKktrxNDGLHN8QkZ",
      |          ^~~~~~~~
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:10:41: error: missing braces around initializer [-Werror=missing-braces]
   10 |     esp_mqtt_client_config_t mqtt_cfg = {
      |                                         ^
   11 |         .uri = "mqtt://164.41.98.25",
      |                {{                   }}
   12 |         .username = "OofGhKktrxNDGLHN8QkZ",
      |                     {
   13 |     };
      |     }
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:16:63: error: expected expression before 'esp_mqtt_event_handle_t'
   16 |     esp_mqtt_client_register_event(client, ESP_EVENT_ANY_ID,  esp_mqtt_event_handle_t, client);
      |                                                               ^~~~~~~~~~~~~~~~~~~~~~~
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:16:5: error: too few arguments to function 'esp_mqtt_client_register_event'
   16 |     esp_mqtt_client_register_event(client, ESP_EVENT_ANY_ID,  esp_mqtt_event_handle_t, client);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.h:4,
                 from /Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:1:
/Users/juliafarias/esp/esp-idf/components/mqtt/esp-mqtt/include/mqtt_client.h:627:11: note: declared here
  627 | esp_err_t esp_mqtt_client_register_event(esp_mqtt_client_handle_t client,
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c: At top level:
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:20:13: error: 'esp_mqtt_event_handle_t' redeclared as different kind of symbol
   20 | static void esp_mqtt_event_handle_t(void *handler_args, esp_event_base_t base, int32_t event_id, void *event_data)
      |             ^~~~~~~~~~~~~~~~~~~~~~~
/Users/juliafarias/esp/esp-idf/components/mqtt/esp-mqtt/include/mqtt_client.h:215:27: note: previous declaration of 'esp_mqtt_event_handle_t' with type 'esp_mqtt_event_handle_t' {aka 'esp_mqtt_event_t *'}
  215 | typedef esp_mqtt_event_t *esp_mqtt_event_handle_t;
      |                           ^~~~~~~~~~~~~~~~~~~~~~~
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c: In function 'esp_mqtt_event_handle_t':
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:22:5: error: statement with no effect [-Werror=unused-value]
   22 |     esp_mqtt_event_handle_t event = event_data;
      |     ^~~~~~~~~~~~~~~~~~~~~~~
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:22:28: error: expected ';' before 'event'
   22 |     esp_mqtt_event_handle_t event = event_data;
      |                            ^~~~~~
      |                            ;
In file included from /Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:2:
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:34:44: error: 'event' undeclared (first use in this function); did you mean 'event_id'?
   34 |         ESP_LOGI(TAG, "Other event id:%d", event->event_id);
      |                                            ^~~~~
/Users/juliafarias/esp/esp-idf/components/log/include/esp_log.h:182:137: note: in definition of macro 'ESP_LOG_LEVEL'
  182 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/Users/juliafarias/esp/esp-idf/components/log/include/esp_log.h:114:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  114 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:34:9: note: in expansion of macro 'ESP_LOGI'
   34 |         ESP_LOGI(TAG, "Other event id:%d", event->event_id);
      |         ^~~~~~~~
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:34:44: note: each undeclared identifier is reported only once for each function it appears in
   34 |         ESP_LOGI(TAG, "Other event id:%d", event->event_id);
      |                                            ^~~~~
/Users/juliafarias/esp/esp-idf/components/log/include/esp_log.h:182:137: note: in definition of macro 'ESP_LOG_LEVEL'
  182 |         if (level==ESP_LOG_ERROR )          { esp_log_write(ESP_LOG_ERROR,      tag, LOG_FORMAT(E, format), esp_log_timestamp(), tag, ##__VA_ARGS__); } \
      |                                                                                                                                         ^~~~~~~~~~~
/Users/juliafarias/esp/esp-idf/components/log/include/esp_log.h:114:38: note: in expansion of macro 'ESP_LOG_LEVEL_LOCAL'
  114 | #define ESP_LOGI( tag, format, ... ) ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO,    tag, format, ##__VA_ARGS__)
      |                                      ^~~~~~~~~~~~~~~~~~~
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:34:9: note: in expansion of macro 'ESP_LOGI'
   34 |         ESP_LOGI(TAG, "Other event id:%d", event->event_id);
      |         ^~~~~~~~
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c: At top level:
/Users/juliafarias/Documents/Assets/UnB/trabalho-final-colheita-feliz/components/mqtt_app.c:20:13: warning: 'esp_mqtt_event_handle_t' defined but not used [-Wunused-function]
   20 | static void esp_mqtt_event_handle_t(void *handler_args, esp_event_base_t base, int32_t event_id, void *event_data)
      |             ^~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/components/CMakeFiles/__idf_components.dir/mqtt_app.c.obj] Error 1
make[1]: *** [esp-idf/components/CMakeFiles/__idf_components.dir/all] Error 2
make: *** [all] Error 2
